# AiRemoteControl

./: Cargo.toml  example_prompt.txt
.cargo/: config.toml
egui/: Cargo.toml
egui/src/: main.rs
orchestrator/: Cargo.toml
orchestrator/src/: computer_use.rs  main.rs
