[package]
name = "test_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
eframe = "0.31.1" # Check for latest version
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] } # Or latest
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "std"]}
base64 = "0.22.1"
image = "0.25.6"
rmcp = {version = "0.1.5", features = ["server", "transport-sse-server", "transport-io"]}
xcap = "0.5.0"
display-info = "0.5.4"
enigo = { version = "0.3.0", features = ["serde"] }
